VACCINCER-1967:Fixed issue with untranslated fields in summary-page

--- a/src/app/create/summary/summary.component.html
+++ b/src/app/create/summary/summary.component.html
@@ -23,7 +23,7 @@
 		<dt>{{ "certificateCreate.form.label.vaccine.dateOfVaccination" | translate }}</dt>
 		<dd id="dateOfVaccination">{{ patient?.vaccination.dateOfVaccination | date }}</dd>
 		<dt>{{ "certificateCreate.form.label.vaccine.countryOfVaccination" | translate }}</dt>
-		<dd id="countryOfVaccination">{{ patient?.vaccination.countryOfVaccination.display }}</dd>
+		<dd id="countryOfVaccination">{{getTranslatedCountry()}}</dd>
 	</dl>
 </ng-container>
 
@@ -31,7 +31,7 @@
 	<h5>{{ "certificateCreate.form.group.test" | translate }}</h5>
 	<dl>
 		<dt>{{ "certificateCreate.form.label.test.typeOfTest" | translate }}</dt>
-		<dd id="typeOfTest">{{ patient?.test.typeOfTest.display }}</dd>
+		<dd id="typeOfTest">{{getTranslatedTypeOfTest()}}</dd>
 		<ng-container *ngIf="patient?.test.manufacturer">
 			<dt>{{ "certificateCreate.form.label.test.manufacturerAndName" | translate }}</dt>
 			<dd id="manufacturer">{{ patient?.test.manufacturer.display }}</dd>
@@ -41,7 +41,7 @@
 		<dt>{{ "certificateCreate.form.label.test.center" | translate }}</dt>
 		<dd id="center">{{ patient?.test.center }}</dd>
 		<dt>{{ "certificateCreate.form.label.test.countryOfTest" | translate }}</dt>
-		<dd id="countryOfTest">{{ patient?.test.countryOfTest.display }}</dd>
+		<dd id="countryOfTest">{{getTranslatedCountry()}}</dd>
 	</dl>
 </ng-container>
 
@@ -59,7 +59,7 @@
 		<dt>{{ "certificateCreate.form.label.test.center" | translate }}</dt>
 		<dd id="AntibodyCenter">{{ patient?.antibody.center }}</dd>
 		<dt>{{ "certificateCreate.form.label.test.countryOfTest" | translate }}</dt>
-		<dd id="countryOfAntibodyTest">CH</dd>
+		<dd id="countryOfAntibodyTest">{{ "certificateCreate.step-three.defaultCountrySwitzerland" | translate }}</dd>
 	</dl>
 </ng-container>
 
@@ -69,7 +69,7 @@
 		<dt>{{ "certificateCreate.form.label.recovery.dateFirstPositiveTestResult" | translate }}</dt>
 		<dd id="dateFirstPositiveTestResult">{{ patient?.recovery.dateFirstPositiveTestResult | date }}</dd>
 		<dt>{{ "certificateCreate.form.label.recovery.countryOfTest" | translate }}</dt>
-		<dd id="countryOfRecovery">{{ patient?.recovery.countryOfTest.display }}</dd>
+		<dd id="countryOfRecovery">{{getTranslatedCountry()}}</dd>
 		<dt>{{ "certificateCreate.step-three.validFrom" | translate }}</dt>
 		<dd id="validFrom">{{ validFrom | date }}</dd>
 	</dl>
@@ -83,7 +83,7 @@
 		<dt>{{ "certificateCreate.form.label.exceptional.responsible" | translate }}</dt>
 		<dd id="ExceptionalCenter">{{ patient?.exceptional.center }}</dd>
 		<dt>{{ "certificateCreate.step-three.attestationCountry" | translate }}</dt>
-		<dd id="countryOfAttestation">CH</dd>
+		<dd id="countryOfAttestation">{{ "certificateCreate.step-three.defaultCountrySwitzerland" | translate }}</dd>
 	</dl>
 </ng-container>
 
