Added FAQ links in Home and App component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,13 +45,13 @@
 					</div>
 					<div class="help-link">
 						<a
-							href="{{ 'home.issuer.url' | translate }}"
+							href="{{ 'home.faq.url' | translate }}"
 							target="_blank"
 							rel="noopener noreferrer"
-							id="issuer_link"
+							id="faq_link"
 						>
 							<span class="icon-link"><span class="fas fa-external-link-alt"></span></span
-							>{{ "home.issuer" | translate }}
+							>{{ "home.faq" | translate }}
 						</a>
 					</div>
 				</section>
