format: clean code

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -53,12 +53,7 @@
 				</a>
 			</li>
 			<li>
-				<a
-					href="{{ 'home.faq.url' | translate }}"
-					target="_blank"
-					rel="noopener noreferrer"
-					id="faq_link"
-				>
+				<a href="{{ 'home.faq.url' | translate }}" target="_blank" rel="noopener noreferrer" id="faq_link">
 					<span class="icon-link"><span class="fas fa-external-link-alt"></span></span
 					>{{ "home.faq" | translate }}
 				</a>
