--- a/src/app/create/create/create.component.html
+++ b/src/app/create/create/create.component.html
@@ -8,7 +8,11 @@
 			(back)="resetCalled()"
 			(next)="nextCalled()"
 		></ec-vaccine-form>
-		<ec-test-form *ngIf="selectedForm === 'test'" (back)="resetCalled()" (next)="nextCalled()"></ec-test-form>
+		<ec-test-form
+			*ngIf="selectedForm === 'test'"
+			(back)="resetCalled()"
+			(next)="nextCalled()"
+		></ec-test-form>
 		<ec-recovery-form
 			*ngIf="selectedForm === 'recovery'"
 			(back)="resetCalled()"
