--- a/src/app/create/create/create.component.html
+++ b/src/app/create/create/create.component.html
@@ -1,4 +1,5 @@
-<mat-horizontal-stepper linear labelPosition="bottom" #stepper class="mat-stepper-lg" *ngIf="valueSetsLoaded">
+<mat-horizontal-stepper linear labelPosition="bottom" #stepper class="mat-stepper-lg"
+						*ngIf="valueSetsLoaded && featureToggleSetsLoaded">
 	<mat-step>
 		<ec-select-certificate-type (next)="nextCalled()"></ec-select-certificate-type>
 	</mat-step>
