--- a/src/app/create/select-certificate-type/select-certificate-type.component.html
+++ b/src/app/create/select-certificate-type/select-certificate-type.component.html
@@ -11,28 +11,30 @@
 			id="generationType-vaccination"
 			value="vaccination"
 			name="vaccination"
-			class="radio-button">
-			{{"certificateCreate.step-one.enum.vaccination" | translate}}
+			class="radio-button"
+		>
+			{{ "certificateCreate.step-one.enum.vaccination" | translate }}
 		</mat-radio-button>
 		<mat-radio-button
 			*ngIf="verifyFeatureAvailability(GenerationType.TEST)"
 			id="generationType-test"
 			value="test"
 			name="test"
-			class="radio-button">
-			{{"certificateCreate.step-one.enum.test" | translate}}
+			class="radio-button"
+		>
+			{{ "certificateCreate.step-one.enum.test" | translate }}
 		</mat-radio-button>
 		<mat-radio-button
 			*ngIf="verifyFeatureAvailability(GenerationType.RECOVERY)"
 			id="generationType-recovery"
 			value="recovery"
 			name="recovery"
-			class="radio-button">
-			{{"certificateCreate.step-one.enum.recovery" | translate}}
+			class="radio-button"
+		>
+			{{ "certificateCreate.step-one.enum.recovery" | translate }}
 		</mat-radio-button>
 
-		<legend
-			class="group-header">
+		<legend class="group-header">
 			{{ "certificateCreate.step-one.enum.chOnly" | translate }}
 		</legend>
 
@@ -41,7 +43,8 @@
 			id="generationType-recovery-rat"
 			value="recovery-rat"
 			name="recovery-rat"
-			class="radio-button">
+			class="radio-button"
+		>
 			{{ "certificateCreate.step-one.enum.recovery-rat" | translate }}
 		</mat-radio-button>
 		<mat-radio-button
@@ -49,15 +52,17 @@
 			id="generationType-antibody"
 			value="antibody"
 			name="antibody"
-			class="radio-button">
-			{{"certificateCreate.step-one.enum.antibody" | translate}}
+			class="radio-button"
+		>
+			{{ "certificateCreate.step-one.enum.antibody" | translate }}
 		</mat-radio-button>
 		<mat-radio-button
 			*ngIf="verifyFeatureAvailability(GenerationType.VACCINATION_TOURIST)"
 			id="generationType-vaccination-tourist"
 			value="vaccination-tourist"
 			name="vaccination-tourist"
-			class="radio-button">
+			class="radio-button"
+		>
 			{{ "certificateCreate.step-one.enum.vaccination-tourist" | translate }}
 		</mat-radio-button>
 		<mat-radio-button
@@ -65,8 +70,9 @@
 			id="exceptional"
 			value="exceptional"
 			name="exceptional"
-			class="radio-button">
-			{{"certificateCreate.step-one.enum.exceptional" | translate}}
+			class="radio-button"
+		>
+			{{ "certificateCreate.step-one.enum.exceptional" | translate }}
 		</mat-radio-button>
 	</mat-radio-group>
 
