fix for RECOVERY_RAT
Signed-off-by: mofobo <mohammed.fonsecaboukhalat@bit.admin.ch>

--- a/src/app/create/select-certificate-type/select-certificate-type.component.html
+++ b/src/app/create/select-certificate-type/select-certificate-type.component.html
@@ -34,12 +34,12 @@
 			{{ "certificateCreate.step-one.enum.recovery" | translate }}
 		</mat-radio-button>
 
-		<legend class="group-header">
+		<legend class="group-header" *ngIf="isAnyChOnlyCertificateAvailable()">
 			{{ "certificateCreate.step-one.enum.chOnly" | translate }}
 		</legend>
 
 		<mat-radio-button
-			*ngIf="verifyFeatureAvailability(GenerationType.RAPID)"
+			*ngIf="verifyFeatureAvailability(GenerationType.RECOVERY_RAT)"
 			id="generationType-recovery-rat"
 			value="recovery-rat"
 			name="recovery-rat"
