--- a/src/app/certificate-revoke/certificate-revoke.component.html
+++ b/src/app/certificate-revoke/certificate-revoke.component.html
@@ -19,7 +19,7 @@
 				<mat-error></mat-error>
 			</mat-form-field>
 			<mat-checkbox aria-label="isFraudCheckbox" [checked]="isFraud" (change)="toggleFraud()">
-				<span>Missing Fraud Checkbox Text TODO</span>
+				<span>{{ "certificateRevoke.fraudFlag" | translate }}</span>
 			</mat-checkbox>
 		</div>
 
