--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,77 +1,75 @@
 <div class="dashboard">
-	<ng-container *ecHasAuthorizationFor="AuthFunction.CREATE_CERTIFICATE_WEB">
-		<mat-card class="dashboard-card" *ecHasAuthorizationFor="AuthFunction.CREATE_VACCINATION_CERTIFICATE">
-			<div class="dashboard-icon">
-				<mat-icon svgIcon="qrcode" class="ob-icon"></mat-icon>
-			</div>
-			<mat-card-header>
-				<mat-card-title class="dashboard-title">{{
-					"dashboard.createCertificate.title" | translate
+	<mat-card class="dashboard-card" *ecHasAuthorizationFor="AuthFunction.CERTIFICATE_GENERATION">
+		<div class="dashboard-icon">
+			<mat-icon svgIcon="qrcode" class="ob-icon"></mat-icon>
+		</div>
+		<mat-card-header>
+			<mat-card-title class="dashboard-title">{{
+				"dashboard.createCertificate.title" | translate
 				}}</mat-card-title>
-			</mat-card-header>
-			<mat-card-content class="dashboard-content">
-				<p>{{ "dashboard.createCertificate.description" | translate }}</p>
-			</mat-card-content>
-			<mat-card-actions>
-				<button id="dashboard-button-create" mat-button obButton="primary" (click)="goToCertificateCreate()">
-					{{ "dashboard.createCertificate.action" | translate }}
-				</button>
-			</mat-card-actions>
-		</mat-card>
-		<mat-card class="dashboard-card" *ecHasAuthorizationFor="AuthFunction.REVOKE_CERTIFICATE">
-			<div class="dashboard-icon">
-				<mat-icon svgIcon="ban" class="ob-icon"></mat-icon>
-			</div>
-			<mat-card-header>
-				<mat-card-title class="dashboard-title">{{
-					"dashboard.invalidateCertificate.title" | translate
+		</mat-card-header>
+		<mat-card-content class="dashboard-content">
+			<p>{{ "dashboard.createCertificate.description" | translate }}</p>
+		</mat-card-content>
+		<mat-card-actions>
+			<button id="dashboard-button-create" mat-button obButton="primary" (click)="goToCertificateCreate()">
+				{{ "dashboard.createCertificate.action" | translate }}
+			</button>
+		</mat-card-actions>
+	</mat-card>
+	<mat-card class="dashboard-card" *ecHasAuthorizationFor="AuthFunction.CERTIFICATE_REVOCATION">
+		<div class="dashboard-icon">
+			<mat-icon svgIcon="ban" class="ob-icon"></mat-icon>
+		</div>
+		<mat-card-header>
+			<mat-card-title class="dashboard-title">{{
+				"dashboard.invalidateCertificate.title" | translate
 				}}</mat-card-title>
-			</mat-card-header>
-			<mat-card-content class="dashboard-content">
-				<p>{{ "dashboard.invalidateCertificate.description" | translate }}</p>
-			</mat-card-content>
-			<mat-card-actions>
-				<button id="dashboard-button-revoke" mat-button obButton="primary" (click)="goToCertificateRevoke()">
-					{{ "dashboard.invalidateCertificate.action" | translate }}
-				</button>
-			</mat-card-actions>
-		</mat-card>
-		<mat-card class="dashboard-card" *ecHasAuthorizationFor="AuthFunction.CREATE_OTP">
-			<div class="dashboard-icon">
-				<mat-icon svgIcon="unlock" class="ob-icon"></mat-icon>
-			</div>
-			<mat-card-header>
-				<mat-card-title class="dashboard-title">{{ "dashboard.otp.title" | translate }}</mat-card-title>
-			</mat-card-header>
-			<mat-card-content class="dashboard-content">
-				<p>{{ "dashboard.otp.description" | translate }}</p>
-			</mat-card-content>
-			<mat-card-actions>
-				<button id="dashboard-button-otp" mat-button obButton="primary" (click)="goToGenerateOtp()">
-					{{ "dashboard.otp.action" | translate }}
-				</button>
-			</mat-card-actions>
-		</mat-card>
-		<mat-card class="dashboard-card" *ecHasAuthorizationFor="AuthFunction.BULK_CREATE_CERTIFICATES">
-			<div class="dashboard-icon">
-				<mat-icon svgIcon="upload" class="ob-icon"></mat-icon>
-			</div>
-			<mat-card-header>
-				<mat-card-title class="dashboard-title">{{ "dashboard.upload.title" | translate }}</mat-card-title>
-			</mat-card-header>
-			<mat-card-content class="dashboard-content">
-				<p>{{ "dashboard.upload.description" | translate }}</p>
-			</mat-card-content>
-			<mat-card-actions>
-				<button
-					id="dashboard-button-upload"
-					mat-button
-					obButton="primary"
-					(click)="goToGenerateMultipleCertificates()"
-				>
-					{{ "dashboard.upload.action" | translate }}
-				</button>
-			</mat-card-actions>
-		</mat-card>
-	</ng-container>
+		</mat-card-header>
+		<mat-card-content class="dashboard-content">
+			<p>{{ "dashboard.invalidateCertificate.description" | translate }}</p>
+		</mat-card-content>
+		<mat-card-actions>
+			<button id="dashboard-button-revoke" mat-button obButton="primary" (click)="goToCertificateRevoke()">
+				{{ "dashboard.invalidateCertificate.action" | translate }}
+			</button>
+		</mat-card-actions>
+	</mat-card>
+	<mat-card class="dashboard-card" *ecHasAuthorizationFor="AuthFunction.OTP_GENERATION">
+		<div class="dashboard-icon">
+			<mat-icon svgIcon="unlock" class="ob-icon"></mat-icon>
+		</div>
+		<mat-card-header>
+			<mat-card-title class="dashboard-title">{{ "dashboard.otp.title" | translate }}</mat-card-title>
+		</mat-card-header>
+		<mat-card-content class="dashboard-content">
+			<p>{{ "dashboard.otp.description" | translate }}</p>
+		</mat-card-content>
+		<mat-card-actions>
+			<button id="dashboard-button-otp" mat-button obButton="primary" (click)="goToGenerateOtp()">
+				{{ "dashboard.otp.action" | translate }}
+			</button>
+		</mat-card-actions>
+	</mat-card>
+	<mat-card class="dashboard-card" *ecHasAuthorizationFor="AuthFunction.BULK_OPERATIONS">
+		<div class="dashboard-icon">
+			<mat-icon svgIcon="upload" class="ob-icon"></mat-icon>
+		</div>
+		<mat-card-header>
+			<mat-card-title class="dashboard-title">{{ "dashboard.upload.title" | translate }}</mat-card-title>
+		</mat-card-header>
+		<mat-card-content class="dashboard-content">
+			<p>{{ "dashboard.upload.description" | translate }}</p>
+		</mat-card-content>
+		<mat-card-actions>
+			<button
+				id="dashboard-button-upload"
+				mat-button
+				obButton="primary"
+				(click)="goToGenerateMultipleCertificates()"
+			>
+				{{ "dashboard.upload.action" | translate }}
+			</button>
+		</mat-card-actions>
+	</mat-card>
 </div>
