--- a/src/app/create/recovery-form/recovery-form.component.html
+++ b/src/app/create/recovery-form/recovery-form.component.html
@@ -28,14 +28,33 @@
 				</mat-select>
 				<mat-error></mat-error>
 			</mat-form-field>
-
-			<div *ngIf="recoveryForm.get('checkBox').enabled">
-				<ec-who-checkbox
-					[control]="recoveryForm.get('checkBox')"
-					[infoText]="infoText"
-					[moreInfo]="'certificateCreate.step-two.moreInfosMessage' | translate"
-				></ec-who-checkbox>
-			</div>
+		</div>
+		<div class="form-field">
+			<mat-radio-group
+				formControlName="confirmation"
+				id="confirmationType"
+				name="confirmationType"
+				aria-label="Select an option"
+				class="radio-button-container confirmation-container"
+			>
+				<mat-radio-button
+					id="confirmationType-nonRetroactive"
+					value="nonRetroactive"
+					name="nonRetroactive"
+					class="radio-button confirmation-radio"
+					[checked]="true"
+				>
+					<span [innerHTML]="'certificateCreate.form.label.radio.nonRetroactive' | translate" class="label-container"></span>
+				</mat-radio-button>	
+				<mat-radio-button
+					id="confirmationType-retroactive"
+					value="retroactive"
+					name="retroactive"
+					class="radio-button confirmation-radio"
+				>
+					<span [innerHTML]="'certificateCreate.form.label.radio.retroactive' | translate" class="label-container"></span>
+				</mat-radio-button>	
+			</mat-radio-group>
 		</div>
 	</fieldset>
 
