format: clean code

--- a/src/app/create/recovery-form/recovery-form.component.html
+++ b/src/app/create/recovery-form/recovery-form.component.html
@@ -44,16 +44,22 @@
 					class="radio-button confirmation-radio"
 					[checked]="true"
 				>
-					<span [innerHTML]="'certificateCreate.form.label.radio.nonRetroactive' | translate" class="label-container"></span>
-				</mat-radio-button>	
+					<span
+						[innerHTML]="'certificateCreate.form.label.radio.nonRetroactive' | translate"
+						class="label-container"
+					></span>
+				</mat-radio-button>
 				<mat-radio-button
 					id="confirmationType-retroactive"
 					value="retroactive"
 					name="retroactive"
 					class="radio-button confirmation-radio"
 				>
-					<span [innerHTML]="'certificateCreate.form.label.radio.retroactive' | translate" class="label-container"></span>
-				</mat-radio-button>	
+					<span
+						[innerHTML]="'certificateCreate.form.label.radio.retroactive' | translate"
+						class="label-container"
+					></span>
+				</mat-radio-button>
 			</mat-radio-group>
 		</div>
 	</fieldset>
