Updated instruction info

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 			<ng-container dropdown-content>
 				<h4>{{ "support.title" | translate }}</h4>
 				<ng-container *ngIf="isAuthenticated$ | async">
-					<p>{{ "support.instructions" | translate }}</p>
+					<p>{{ "support.instructionsUpdated" | translate }}</p>
 					<a href="tel:+41584658888">058 465 88 88</a>
 				</ng-container>
 				<section *ngIf="lang$ | async as lang">
