--- a/src/app/create/summary/summary.component.html
+++ b/src/app/create/summary/summary.component.html
@@ -38,8 +38,8 @@
 		</ng-container>
 		<dt>{{ "certificateCreate.form.label.test.sampleDateTime" | translate }}</dt>
 		<dd id="sampleDate">{{ patient?.test.sampleDate | date: "dd.MM.YYYY HH:mm" }}</dd>
-		<dt>{{ "certificateCreate.form.label.test.center" | translate }}</dt>
-		<dd id="center">{{ patient?.test.center }}</dd>
+		<dt *ngIf="GenerationType.RECOVERY_RAT != certificateType">{{ "certificateCreate.form.label.test.center" | translate }}</dt>
+		<dd *ngIf="GenerationType.RECOVERY_RAT != certificateType" id="center">{{ patient?.test.center }}</dd>
 		<dt>{{ "certificateCreate.form.label.test.countryOfTest" | translate }}</dt>
 		<dd id="countryOfTest">{{ getTranslatedCountry() }}</dd>
 	</dl>
