--- a/src/app/certificate-revoke/certificate-revoke.component.html
+++ b/src/app/certificate-revoke/certificate-revoke.component.html
@@ -2,7 +2,7 @@
 	<h1>{{ "certificateRevoke.title" | translate }}</h1>
 	<p>{{ "certificateRevoke.instructions" | translate }}</p>
 
-	<ob-alert [type]="'warning'">
+	<ob-alert class="warning-message" [type]="'warning'">
 		<span [innerHTML]="'certificateRevoke.warning' | translate"></span>
 	</ob-alert>
 
