add the new warning message for recovery-rat
Signed-off-by: mofobo <mohammed.fonsecaboukhalat@bit.admin.ch>

--- a/src/app/create/test-form/test-form.component.html
+++ b/src/app/create/test-form/test-form.component.html
@@ -127,6 +127,7 @@
 				<mat-error></mat-error>
 			</mat-form-field>
 		</div>
+		<ec-retroactive-radio *ngIf="rapid"></ec-retroactive-radio>
 	</fieldset>
 
 	<div class="stepper-footer">
