implemented display of notifications

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<ec-notifications></ec-notifications>
 <div class="dashboard">
 	<mat-card class="dashboard-card" *ecHasAuthorizationFor="AuthFunction.CERTIFICATE_GENERATION">
 		<div class="dashboard-icon">
