format: clean code

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -83,12 +83,7 @@
 			<p>{{ "dashboard.reports.description" | translate }}</p>
 		</mat-card-content>
 		<mat-card-actions>
-			<button
-				id="dashboard-button-reports"
-				mat-button
-				obButton="primary"
-				(click)="goToGenerateReports()"
-			>
+			<button id="dashboard-button-reports" mat-button obButton="primary" (click)="goToGenerateReports()">
 				{{ "dashboard.reports.action" | translate }}
 			</button>
 		</mat-card-actions>
