--- a/src/app/report/select-report-type/select-report-type.component.html
+++ b/src/app/report/select-report-type/select-report-type.component.html
@@ -8,23 +8,13 @@
 			class="radio-button-container"
 		>
 			<ng-container *ecHasAuthorizationFor="AuthFunction.REPORT_A2">
-				<mat-radio-button
-					id="reportType-A2"
-					value="report-a2"
-					name="report-a2"
-					class="radio-button"
-				>
+				<mat-radio-button id="reportType-A2" value="report-a2" name="report-a2" class="radio-button">
 					{{ "report.step-one.enum.report-a2" | translate }}
 				</mat-radio-button>
 			</ng-container>
 
 			<ng-container *ecHasAuthorizationFor="AuthFunction.REPORT_A3">
-				<mat-radio-button
-					id="reportType-A3"
-					value="report-a3"
-					name="report-a3"
-					class="radio-button"
-				>
+				<mat-radio-button id="reportType-A3" value="report-a3" name="report-a3" class="radio-button">
 					{{ "certificateCreate.step-one.enum.test" | translate }}
 				</mat-radio-button>
 			</ng-container>
