added authorization; added temporary german translations

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -72,7 +72,7 @@
 			</button>
 		</mat-card-actions>
 	</mat-card>
-	<mat-card class="dashboard-card" *ecHasAuthorizationFor="AuthFunction.BULK_OPERATIONS">
+	<mat-card class="dashboard-card" *ecHasAuthorizationFor="AuthFunction.REPORTING_SELF_SERVICE">
 		<div class="dashboard-icon">
 			<mat-icon svgIcon="chart" class="ob-icon"></mat-icon>
 		</div>
