--- a/src/app/create/test-form/test-form.component.html
+++ b/src/app/create/test-form/test-form.component.html
@@ -20,8 +20,7 @@
 		<div class="form-field">
 			<div
 				*ngIf="!antibody && !rapid"
-				class="radio-button-field"
-				[ngClass]="{ 'additional-padding': !displayTestProducts }"
+				class="radio-button-field additional-padding"
 			>
 				<label class="radio-button-field--label">{{
 					"certificateCreate.form.label.test.typeOfTest" | translate
@@ -39,47 +38,6 @@
 					</mat-radio-group>
 				</div>
 			</div>
-
-			<mat-form-field class="mat-form-field-lg" obErrorMessages *ngIf="displayTestProducts || rapid">
-				<mat-label>{{ "certificateCreate.form.label.test.manufacturerAndName" | translate }}</mat-label>
-				<input
-					type="text"
-					matInput
-					id="manufacturer"
-					[formControl]="rapidTestCompleteControl"
-					[matAutocomplete]="auto"
-					#rapidTestAutocomplete
-				/>
-				<button
-					type="button"
-					role="button"
-					[obInputClear]="rapidTestCompleteControl"
-					(onClear)="onRapidTestCompleteClear()"
-					class="clear-buton"
-				>
-					<mat-icon svgIcon="cancel-circle" class="ob-icon clear-icon"></mat-icon>
-					<span class="sr-only">{{ "i18n.common.clear" | translate }}</span>
-				</button>
-				<mat-error></mat-error>
-				<mat-autocomplete #auto="matAutocomplete" panelWidth="max-content">
-					<mat-option
-						*ngFor="let option of filteredRapidTests"
-						[value]="option"
-						[ngStyle]="{ color: option.validUntil ? 'red' : 'black' }"
-					>
-						{{ option.display }}
-					</mat-option>
-				</mat-autocomplete>
-			</mat-form-field>
-
-			<p id="gracePeriodMessage" *ngIf="this.testForm.get('product').value?.validUntil">
-				{{
-					"gracePeriodMessage"
-						| obTranslateParams
-							: { validUntil: this.testForm.get("product").value?.validUntil | date: "YYYY-MM-dd" }
-				}}
-			</p>
-
 			<p class="form-field-info">
 				{{ "certificateCreate.form.label.test.sampleDate.info" | translate }}
 			</p>
