--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -73,4 +73,25 @@
 			</button>
 		</mat-card-actions>
 	</mat-card>
+	<mat-card class="dashboard-card" *ecHasAuthorizationFor="AuthFunction.BULK_OPERATIONS">
+		<div class="dashboard-icon">
+			<mat-icon svgIcon="upload" class="ob-icon"></mat-icon>
+		</div>
+		<mat-card-header>
+			<mat-card-title class="dashboard-title">{{ "dashboard.bulk.revocation.title" | translate }}</mat-card-title>
+		</mat-card-header>
+		<mat-card-content class="dashboard-content">
+			<p>{{ "dashboard.bulk.revocation.description" | translate }}</p>
+		</mat-card-content>
+		<mat-card-actions>
+			<button
+				id="dashboard-button-bulk-revoke"
+				mat-button
+				obButton="primary"
+				(click)="goToRevokeMultipleCertificates()"
+			>
+				{{ "dashboard.bulk.revocation.action" | translate }}
+			</button>
+		</mat-card-actions>
+	</mat-card>
 </div>
