link directly to the anchor
Signed-off-by: mofobo <mohammed.fonsecaboukhalat@bit.admin.ch>

--- a/src/app/bulk-revocation/bulkRevocation.component.html
+++ b/src/app/bulk-revocation/bulkRevocation.component.html
@@ -2,7 +2,7 @@
 <p>
 	{{ "bulk.revocation.instructions" | translate }}
 	<a
-		href="https://github.com/admin-ch/CovidCertificate-UIdoc"
+		href="https://github.com/admin-ch/CovidCertificate-UIdoc#how-to-revoke-multiple-covid-certificates-"
 		target="_blank"
 		rel="noopener noreferrer"
 		id="templates-link"
