--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
 		<mat-card-header>
 			<mat-card-title class="dashboard-title">{{
 				"dashboard.createCertificate.title" | translate
-			}}</mat-card-title>
+				}}</mat-card-title>
 		</mat-card-header>
 		<mat-card-content class="dashboard-content">
 			<p>{{ "dashboard.createCertificate.description" | translate }}</p>
@@ -25,7 +25,7 @@
 		<mat-card-header>
 			<mat-card-title class="dashboard-title">{{
 				"dashboard.invalidateCertificate.title" | translate
-			}}</mat-card-title>
+				}}</mat-card-title>
 		</mat-card-header>
 		<mat-card-content class="dashboard-content">
 			<p>{{ "dashboard.invalidateCertificate.description" | translate }}</p>
@@ -73,7 +73,10 @@
 			</button>
 		</mat-card-actions>
 	</mat-card>
-	<mat-card class="dashboard-card" *ecHasAuthorizationFor="AuthFunction.BULK_OPERATIONS">
+	<mat-card class="dashboard-card"
+			  *ecHasAuthorizationForAll="[
+					AuthFunction.BULK_OPERATIONS,
+					AuthFunction.BULK_REVOKE_CERTIFICATES]">
 		<div class="dashboard-icon">
 			<mat-icon svgIcon="upload" class="ob-icon"></mat-icon>
 		</div>
